# RunwayLib.jl

./: .dir-locals.el  .gitattributes  .gitignore  CLAUDE.md  Manifest.toml  Project.toml  README.md  process_csv_feb2025_no_deps.jl
.github/workflows/: CI.yml  juliac.yml  pkgcompiler.yml
juliac/: Makefile  Project.toml  create_symlinks.sh  lib.jl  libposeest.h  loadrunwaylib.jl  main.c  main.jl  required_libraries.txt  test_in_container.sh
juliac/juliac/: juliac-buildscript.jl
juliac/share/julia/: LocalPreferences.toml
juliac/share/julia/artifacts/01031ed5104e32db901826afcb496cd82d61a067/lib/: libxml2.so.16
juliac/share/julia/artifacts/01031ed5104e32db901826afcb496cd82d61a067/lib/pkgconfig/: libxml-2.0.pc
juliac/share/julia/artifacts/09b351e89a85e07e957194a647765403d4ee1bcb/lib/: libopenspecfun.so.2.1
juliac/share/julia/artifacts/5acd766faaca59c3c1f3cfa67e2bf6dcf1e3e883/lib/: libcharset.so.1.0.0  libiconv.so.2.7.0
juliac/share/julia/artifacts/bc6a577e335709d64448aa4ed7fa1bed0b2dc000/lib/: libtbb.so.12.14  libtbbmalloc.so.2.14  libtbbmalloc_proxy.so.2.14
pkgcompiler/: Project.toml  additional_precompile.jl  build.jl  libposeest.h
poseest_py/: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  setup.py
poseest_py/poseest/: __init__.py  core.py
poseest_py/poseest/native/: __init__.py
poseest_py/tests/: test_basic.py  test_enhanced_api.py  test_poseest.py  test_simple.py
src/: RunwayLib.jl  RunwayPoseEstimation.jl  c_api.jl  entrypoints.jl  precompile_workloads.jl  type_piracy.jl
src/camera_model/: errors.jl  projection.jl
src/coordinate_systems/: transformations.jl  types.jl
src/data_management/: runway_database.jl
src/pose_estimation/: errors.jl  optimization.jl  types.jl
src/uncertainty_quantification/: noise_models.jl
test/: Project.toml  runtests.jl
test/integration/: test_end_to_end.jl
test/unit/: test_c_api.jl  test_camera_model.jl  test_coordinate_systems.jl  test_data_management.jl  test_integrity_monitoring.jl  test_jet.jl  test_pose_estimation.jl  test_uncertainty_quantification.jl  test_visualization.jl
(+3 files in other folders)
