[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poseest"
dynamic = ["version"]
description = "Python wrapper for runway pose estimation using Julia/C library"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pose estimation", "computer vision", "runway", "aircraft", "julia", "optimization"]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/poseest-py"
Repository = "https://github.com/yourusername/poseest-py.git"
Documentation = "https://poseest-py.readthedocs.io/"
"Bug Tracker" = "https://github.com/yourusername/poseest-py/issues"

[tool.setuptools]
packages = ["poseest"]
include-package-data = true

[tool.setuptools.package-data]
poseest = [
    "native/lib/**/*",
    "native/include/**/*",
    "native/share/**/*",
]

[tool.setuptools.dynamic]
version = {attr = "poseest.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true